test/libsolidity/syntaxTests/parsing/function_type_as_storage_variable_with_modifiers.sol
contract test {
	function (uint, uint) modifier1() returns (uint) f1;
}
// ----
// ParserError 2314: (48-49): Expected ';' but got '('
